Fixed one constrain on change email setting view controller

--- a/EagleSocial/View/Main.storyboard
+++ b/EagleSocial/View/Main.storyboard
@@ -901,9 +901,6 @@
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NGc-Io-YyH">
                                 <rect key="frame" x="135" y="286" width="201" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="201" id="8Qd-io-qGT"/>
-                                </constraints>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardAppearance="alert" returnKeyType="done" textContentType="email"/>
@@ -977,34 +974,34 @@
                         <color key="backgroundColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="7BW-tm-KSs" firstAttribute="top" secondItem="27f-Q0-quj" secondAttribute="bottom" constant="40" id="03O-lh-KYX"/>
+                            <constraint firstItem="I1d-aI-0GJ" firstAttribute="leading" secondItem="NGc-Io-YyH" secondAttribute="leading" id="0f5-Fi-E6U"/>
+                            <constraint firstItem="NGc-Io-YyH" firstAttribute="top" secondItem="Lex-4e-F3I" secondAttribute="bottom" constant="29" id="3dr-9f-Ywv"/>
                             <constraint firstItem="d1G-Q8-3c0" firstAttribute="top" secondItem="ABQ-QQ-XQQ" secondAttribute="top" id="3sH-g9-jPs"/>
-                            <constraint firstItem="I1d-aI-0GJ" firstAttribute="top" secondItem="gK8-Bt-ckw" secondAttribute="bottom" constant="27" id="5Da-H4-rVs"/>
-                            <constraint firstItem="gK8-Bt-ckw" firstAttribute="top" secondItem="NGc-Io-YyH" secondAttribute="bottom" constant="31" id="Alb-Nz-Y2y"/>
+                            <constraint firstItem="I1d-aI-0GJ" firstAttribute="top" secondItem="gK8-Bt-ckw" secondAttribute="bottom" constant="27" id="5dq-KA-7DF"/>
                             <constraint firstItem="utC-KQ-hsM" firstAttribute="centerX" secondItem="BUo-hg-FJT" secondAttribute="centerX" id="DhM-TB-pml"/>
-                            <constraint firstItem="I1d-aI-0GJ" firstAttribute="leading" secondItem="BUo-hg-FJT" secondAttribute="trailing" constant="45" id="EqV-4p-bk2"/>
-                            <constraint firstItem="M9R-eL-awh" firstAttribute="top" secondItem="I1d-aI-0GJ" secondAttribute="bottom" constant="38" id="FeV-EP-CwN"/>
+                            <constraint firstItem="NGc-Io-YyH" firstAttribute="leading" secondItem="27f-Q0-quj" secondAttribute="trailing" constant="34" id="ENT-Mn-Y1i"/>
                             <constraint firstItem="ABQ-QQ-XQQ" firstAttribute="trailing" secondItem="d1G-Q8-3c0" secondAttribute="trailing" constant="55" id="H15-qN-Xlf"/>
+                            <constraint firstItem="I1d-aI-0GJ" firstAttribute="centerY" secondItem="BUo-hg-FJT" secondAttribute="centerY" id="Hi2-Tk-lP0"/>
+                            <constraint firstItem="I1d-aI-0GJ" firstAttribute="centerX" secondItem="gK8-Bt-ckw" secondAttribute="centerX" id="Hmv-H0-10V"/>
+                            <constraint firstItem="gK8-Bt-ckw" firstAttribute="top" secondItem="NGc-Io-YyH" secondAttribute="bottom" constant="31" id="KdK-f1-BAS"/>
                             <constraint firstItem="Lex-4e-F3I" firstAttribute="top" secondItem="d1G-Q8-3c0" secondAttribute="bottom" constant="27" id="MpN-vt-4L4"/>
                             <constraint firstItem="ABQ-QQ-XQQ" firstAttribute="bottom" secondItem="M9R-eL-awh" secondAttribute="bottom" constant="165" id="QKS-Zr-zXL"/>
                             <constraint firstAttribute="bottomMargin" secondItem="BUo-hg-FJT" secondAttribute="bottom" constant="237" id="S36-Dp-0yf"/>
-                            <constraint firstItem="NGc-Io-YyH" firstAttribute="leading" secondItem="27f-Q0-quj" secondAttribute="trailing" constant="34" id="VH9-Dv-Kfv"/>
-                            <constraint firstItem="gK8-Bt-ckw" firstAttribute="leading" secondItem="7BW-tm-KSs" secondAttribute="trailing" constant="8" symbolic="YES" id="Voj-8m-TKq"/>
                             <constraint firstItem="BUo-hg-FJT" firstAttribute="top" secondItem="7BW-tm-KSs" secondAttribute="bottom" constant="31" id="agS-k1-lkN"/>
-                            <constraint firstItem="ABQ-QQ-XQQ" firstAttribute="trailing" secondItem="gK8-Bt-ckw" secondAttribute="trailing" constant="38" id="bQb-bm-2TK"/>
+                            <constraint firstItem="NGc-Io-YyH" firstAttribute="leading" secondItem="Lex-4e-F3I" secondAttribute="leading" id="bue-DU-uFl"/>
                             <constraint firstItem="ABQ-QQ-XQQ" firstAttribute="trailing" secondItem="M9R-eL-awh" secondAttribute="trailing" constant="69" id="cav-7N-tRy"/>
-                            <constraint firstItem="NGc-Io-YyH" firstAttribute="trailing" secondItem="Lex-4e-F3I" secondAttribute="trailing" id="cyJ-Vb-f24"/>
+                            <constraint firstItem="NGc-Io-YyH" firstAttribute="trailing" secondItem="Lex-4e-F3I" secondAttribute="trailing" id="cpx-8I-Jn9"/>
                             <constraint firstItem="7BW-tm-KSs" firstAttribute="leading" secondItem="27f-Q0-quj" secondAttribute="leading" id="e3o-VI-Ptk"/>
                             <constraint firstItem="5iM-R4-J0u" firstAttribute="baseline" secondItem="M9R-eL-awh" secondAttribute="baseline" id="ebB-IX-kXV"/>
                             <constraint firstItem="utC-KQ-hsM" firstAttribute="centerY" secondItem="Lex-4e-F3I" secondAttribute="centerY" id="fDj-8K-zcW"/>
+                            <constraint firstItem="I1d-aI-0GJ" firstAttribute="trailing" secondItem="NGc-Io-YyH" secondAttribute="trailing" id="g6v-Uf-Dju"/>
                             <constraint firstItem="5iM-R4-J0u" firstAttribute="leading" secondItem="ABQ-QQ-XQQ" secondAttribute="leading" constant="79" id="h20-cm-86c"/>
                             <constraint firstItem="M9R-eL-awh" firstAttribute="leading" secondItem="5iM-R4-J0u" secondAttribute="trailing" constant="47" id="hJx-mw-Lys"/>
+                            <constraint firstItem="I1d-aI-0GJ" firstAttribute="leading" secondItem="gK8-Bt-ckw" secondAttribute="leading" id="hSG-Hh-SSX"/>
                             <constraint firstItem="Lex-4e-F3I" firstAttribute="leading" secondItem="utC-KQ-hsM" secondAttribute="trailing" constant="43" id="kGU-0G-9o1"/>
-                            <constraint firstItem="ABQ-QQ-XQQ" firstAttribute="trailing" secondItem="I1d-aI-0GJ" secondAttribute="trailing" constant="39" id="nhn-Y6-bXp"/>
                             <constraint firstItem="27f-Q0-quj" firstAttribute="top" secondItem="utC-KQ-hsM" secondAttribute="bottom" constant="43" id="o1B-0B-1Qi"/>
                             <constraint firstItem="7BW-tm-KSs" firstAttribute="leading" secondItem="BUo-hg-FJT" secondAttribute="leading" constant="-1" id="r9t-94-2CX"/>
-                            <constraint firstItem="gK8-Bt-ckw" firstAttribute="centerX" secondItem="I1d-aI-0GJ" secondAttribute="centerX" constant="1" id="rpW-iO-64w"/>
                             <constraint firstItem="BUo-hg-FJT" firstAttribute="leading" secondItem="ABQ-QQ-XQQ" secondAttribute="leading" constant="16" id="xcX-ks-8kh"/>
-                            <constraint firstItem="NGc-Io-YyH" firstAttribute="top" secondItem="Lex-4e-F3I" secondAttribute="bottom" constant="29" id="ytg-IM-0rn"/>
                             <constraint firstItem="d1G-Q8-3c0" firstAttribute="leading" secondItem="ABQ-QQ-XQQ" secondAttribute="leading" constant="55" id="z9M-0M-wtE"/>
                             <constraint firstItem="ABQ-QQ-XQQ" firstAttribute="trailing" secondItem="Lex-4e-F3I" secondAttribute="trailing" constant="39" id="zF5-hU-bMW"/>
                         </constraints>
