--- a/EagleSocial/View/Main.storyboard
+++ b/EagleSocial/View/Main.storyboard
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cxw-kK-Kzv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cxw-kK-Kzv">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="Baskerville.ttc">
-            <string>Baskerville</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--Friends-->
         <scene sceneID="Sga-4V-oDf">
@@ -73,7 +68,7 @@
             </objects>
             <point key="canvasLocation" x="1255.2" y="674.21289355322347"/>
         </scene>
-        <!--Profile-->
+        <!--Profile View Controller-->
         <scene sceneID="tJB-zO-giN">
             <objects>
                 <viewController id="wcH-Bb-9Ux" customClass="ProfileViewController" customModule="EagleSocial" customModuleProvider="target" sceneMemberID="viewController">
@@ -115,7 +110,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ES_Logo" translatesAutoresizingMaskIntoConstraints="NO" id="m4T-3b-JKb">
-                                <rect key="frame" x="110" y="20" width="155" height="158"/>
+                                <rect key="frame" x="110" y="64" width="155" height="114"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xVg-iw-nfJ">
@@ -176,7 +171,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="wbc-bt-LM8"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Profile" image="profile_icon" id="xFo-d4-kdM"/>
+                    <navigationItem key="navigationItem" id="ETX-ZY-pDI"/>
                     <connections>
                         <outlet property="ageLabel" destination="oe7-wZ-IE6" id="hj4-kX-V3D"/>
                         <outlet property="imageView" destination="m4T-3b-JKb" id="hMu-ml-hNN"/>
@@ -185,11 +180,12 @@
                         <outlet property="userNameLabel" destination="ImU-5l-NLk" id="lpp-oQ-RPW"/>
                         <outlet property="userStatusTableView" destination="fVS-2S-AGZ" id="Fb2-w4-kyj"/>
                         <segue destination="lav-IM-FbT" kind="presentation" identifier="goToEdit" id="0Aa-0r-Anf"/>
+                        <segue destination="g2u-UN-YTu" kind="show" identifier="goToComments" id="3yW-RO-VP0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xr7-jy-VO8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1906.4000000000001" y="674.21289355322347"/>
+            <point key="canvasLocation" x="2759" y="674"/>
         </scene>
         <!--Edit Profile View Controller-->
         <scene sceneID="dHB-rK-8s1">
@@ -393,7 +389,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YzW-aX-Ru3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2620" y="673.31334332833592"/>
+            <point key="canvasLocation" x="3559.1999999999998" y="673.31334332833592"/>
         </scene>
         <!--Eagle Messages-->
         <scene sceneID="z8y-fq-606">
@@ -1231,7 +1227,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="4pu-yF-qLw" kind="relationship" relationship="viewControllers" id="zMB-8j-v0M"/>
-                        <segue destination="wcH-Bb-9Ux" kind="relationship" relationship="viewControllers" id="j72-az-UQ4"/>
+                        <segue destination="Fky-hd-OY5" kind="relationship" relationship="viewControllers" id="j72-az-UQ4"/>
                         <segue destination="IBR-7u-nVP" kind="relationship" relationship="viewControllers" id="7aM-gg-TRz"/>
                         <segue destination="QA6-E5-Fvl" kind="relationship" relationship="viewControllers" id="HjV-zd-dzE"/>
                         <segue destination="8s7-aM-eda" kind="relationship" relationship="viewControllers" id="Inj-Fl-Tag"/>
@@ -1333,7 +1329,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rHN-Uc-Da1" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3623.1999999999998" y="674.21289355322347"/>
+            <point key="canvasLocation" x="4562.3999999999996" y="674.21289355322347"/>
         </scene>
         <!--Main View Controller-->
         <scene sceneID="qtj-MP-Qr2">
@@ -1752,6 +1748,109 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ITc-dr-gZ2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2068" y="1459"/>
+        </scene>
+        <!--Comments View Controller-->
+        <scene sceneID="kks-Aq-vmm">
+            <objects>
+                <viewController id="g2u-UN-YTu" customClass="CommentsViewController" customModule="EagleSocial" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cFh-zm-Fax">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jaT-PT-NPc">
+                                <rect key="frame" x="0.0" y="64" width="375" height="502"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="commentCell" id="W6h-Xe-NZK">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="W6h-Xe-NZK" id="Cjd-IR-Myb">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZNH-Tg-8Kx">
+                                <rect key="frame" x="0.0" y="566" width="375" height="52"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8HT-0k-aHf">
+                                        <rect key="frame" x="8" y="11" width="273" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="yes" spellCheckingType="yes" returnKeyType="done"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lBJ-nU-5QB">
+                                        <rect key="frame" x="289" y="11" width="78" height="30"/>
+                                        <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="78" id="qY4-PY-pWD"/>
+                                            <constraint firstAttribute="height" constant="30" id="x8N-tE-ia7"/>
+                                        </constraints>
+                                        <state key="normal" title="Send">
+                                            <color key="titleColor" red="1" green="0.75686274509999996" blue="0.29803921570000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="titleShadowColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="sendButtonPressed:" destination="g2u-UN-YTu" eventType="touchUpInside" id="MfF-zD-gHg"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.66422420739999999" green="0.66424006219999998" blue="0.66423153879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="8HT-0k-aHf" firstAttribute="top" secondItem="ZNH-Tg-8Kx" secondAttribute="top" constant="11" id="5Bc-zj-eJL"/>
+                                    <constraint firstAttribute="bottom" secondItem="8HT-0k-aHf" secondAttribute="bottom" constant="11" id="E2L-sD-r4G"/>
+                                    <constraint firstItem="8HT-0k-aHf" firstAttribute="leading" secondItem="ZNH-Tg-8Kx" secondAttribute="leading" constant="8" id="IHi-Wq-Pa4"/>
+                                    <constraint firstItem="lBJ-nU-5QB" firstAttribute="top" secondItem="ZNH-Tg-8Kx" secondAttribute="top" constant="11" id="IOb-TM-ZOC"/>
+                                    <constraint firstAttribute="bottom" secondItem="lBJ-nU-5QB" secondAttribute="bottom" constant="11" id="Rok-uw-LRu"/>
+                                    <constraint firstItem="lBJ-nU-5QB" firstAttribute="leading" secondItem="8HT-0k-aHf" secondAttribute="trailing" constant="8" id="SKu-l3-1ls"/>
+                                    <constraint firstItem="lBJ-nU-5QB" firstAttribute="leading" secondItem="8HT-0k-aHf" secondAttribute="trailing" constant="8" id="U14-64-hEE"/>
+                                    <constraint firstAttribute="trailing" secondItem="lBJ-nU-5QB" secondAttribute="trailing" constant="8" id="hp5-eG-RWc"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="jaT-PT-NPc" firstAttribute="centerY" secondItem="cFh-zm-Fax" secondAttribute="centerY" constant="-18.5" id="5Qe-Vl-PgY"/>
+                            <constraint firstItem="ZNH-Tg-8Kx" firstAttribute="top" secondItem="jaT-PT-NPc" secondAttribute="bottom" id="BF7-bL-Yhp"/>
+                            <constraint firstItem="jaT-PT-NPc" firstAttribute="top" secondItem="6hw-Il-lWj" secondAttribute="top" id="NAV-Lt-MVi"/>
+                            <constraint firstItem="jaT-PT-NPc" firstAttribute="leading" secondItem="6hw-Il-lWj" secondAttribute="leading" id="Uo4-gy-AJe"/>
+                            <constraint firstItem="ZNH-Tg-8Kx" firstAttribute="bottom" secondItem="6hw-Il-lWj" secondAttribute="bottom" id="Z7X-Aj-Nj7"/>
+                            <constraint firstItem="jaT-PT-NPc" firstAttribute="trailing" secondItem="6hw-Il-lWj" secondAttribute="trailing" id="e0v-tZ-BXa"/>
+                            <constraint firstItem="ZNH-Tg-8Kx" firstAttribute="trailing" secondItem="6hw-Il-lWj" secondAttribute="trailing" id="hdJ-fK-Jkh"/>
+                            <constraint firstItem="ZNH-Tg-8Kx" firstAttribute="leading" secondItem="6hw-Il-lWj" secondAttribute="leading" id="nm4-gF-3zu"/>
+                            <constraint firstItem="ZNH-Tg-8Kx" firstAttribute="top" secondItem="jaT-PT-NPc" secondAttribute="bottom" id="vJ6-Fp-Pwf"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="6hw-Il-lWj"/>
+                    </view>
+                    <connections>
+                        <outlet property="commentTextField" destination="8HT-0k-aHf" id="JZN-lR-lY7"/>
+                        <outlet property="sendButton" destination="lBJ-nU-5QB" id="7ZX-na-Vuw"/>
+                        <outlet property="tableView" destination="jaT-PT-NPc" id="Jia-Nl-OWA"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Lq4-NX-75m" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2870" y="1459"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="RCf-Se-Q04">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Fky-hd-OY5" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Profile" image="profile_icon" id="xFo-d4-kdM"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="J4N-Gz-ys6">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="wcH-Bb-9Ux" kind="relationship" relationship="rootViewController" id="rVl-wV-rgD"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cBU-mm-ba7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1906.4000000000001" y="674.21289355322347"/>
         </scene>
     </scenes>
     <resources>
